# EasyPaddleOCR

./: pyproject.toml  readme.md  requirements.txt  setup.py  test.py
.github/workflows/: publish-to-pypi.yml  test.yml
configs/cls/: cls_mv3.yml
configs/det/ch_PP-OCRv4/: ch_PP-OCRv4_det_cml.yml  ch_PP-OCRv4_det_student.yml  ch_PP-OCRv4_det_teacher.yml
configs/rec/PP-OCRv4/: ch_PP-OCRv4_rec_hgnet.yml
easypaddleocr/: __init__.py  infer_cls_class.py  infer_cls_gpu_class.py  infer_det_class.py  infer_det_gpu_class.py  infer_rec_class.py  infer_rec_gpu_class.py  infer_system.py  tools_utility.py
easypaddleocr/torchocr/: __init__.py
easypaddleocr/torchocr/data/: __init__.py
easypaddleocr/torchocr/data/imaug/: copy_paste.py  ct_process.py  drrg_targets.py  fce_aug.py  label_ops.py  pg_process.py
easypaddleocr/torchocr/engine/: __init__.py  trainer.py
easypaddleocr/torchocr/losses/: e2e_pg_loss.py
easypaddleocr/torchocr/metrics/: e2e_metric.py
easypaddleocr/torchocr/modeling/architectures/: base_model.py  distillation_model.py
easypaddleocr/torchocr/modeling/backbones/: det_mobilenet_v3.py  det_resnet_vd.py  rec_lcnetv3.py  rec_mv1_enhance.py  (+2 more)
easypaddleocr/torchocr/postprocess/: db_postprocess.py  east_postprocess.py  fce_postprocess.py  pg_postprocess.py
easypaddleocr/torchocr/utils/: ckpt.py
test/test_images/_raw/: basic.psd  large.psd
test_images/_raw/: transparent_demo.psd
tools/: infer_cls_gpu.py  infer_det_gpu.py  infer_det_gpu_class.py  infer_rec_gpu.py  infer_rec_gpu_class.py  infer_system.py
tools/infer/: predict_system.py
(+8 files in other folders)
