[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easypaddleocr"
version = "0.1.1"
authors = [
    { name = "pk5ls20" },
    { name = "hv0905" }
]
description = "A simple, optional tool for PaddleOCR Detection, direction classification and recognition on CPU and GPU using torch."
readme = "readme.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
urls = {Code = "https://github.com/pk5ls20/EasyPaddleOCR", Documentation = "https://github.com/pk5ls20/EasyPaddleOCR", Download = "https://pypi.org/project/easypaddleocr", Homepage = "https://github.com/pk5ls20/EasyPaddleOCR", Issues = "https://github.com/pk5ls20/EasyPaddleOCR/issues"}
dependencies = [
    "shapely",
    "scikit-image",
    "imgaug",
    "pyclipper",
    "numpy",
    "opencv-python",
    "Pillow",
    "pyyaml",
    "torch",
    "loguru",
    "huggingface_hub"
]
